syntax = "proto3";

package provisioning;

option go_package = "github.com/vnFuhung2903/vcs-infrastructure-provisioning-service/proto";

service ProvisioningService {
  rpc CreatePostgreSQL(CreatePostgreSQLRequest) returns (PostgreSQLResponse);
  rpc GetPostgreSQLInfo(GetPostgreSQLInfoRequest) returns (PostgreSQLResponse);
  rpc StartPostgreSQL(StartPostgreSQLRequest) returns (OperationResponse);
  rpc StopPostgreSQL(StopPostgreSQLRequest) returns (OperationResponse);
  rpc DeletePostgreSQL(DeletePostgreSQLRequest) returns (OperationResponse);
}

message CreatePostgreSQLRequest {
  string user_id = 1;
  string name = 2;
  string version = 3;
  int32 port = 4;
  string database_name = 5;
  string username = 6;
  string password = 7;
  int64 cpu_limit = 8;
  int64 memory_limit = 9;
  int64 storage_size = 10;
}

message GetPostgreSQLInfoRequest {
  string id = 1;
}

message StartPostgreSQLRequest {
  string id = 1;
}

message StopPostgreSQLRequest {
  string id = 1;
}

message DeletePostgreSQLRequest {
  string id = 1;
}

message PostgreSQLResponse {
  string id = 1;
  string name = 2;
  string status = 3;
  string container_id = 4;
  string version = 5;
  int32 port = 6;
  string database_name = 7;
  string username = 8;
  int64 cpu_limit = 9;
  int64 memory_limit = 10;
  int64 storage_size = 11;
  string created_at = 12;
  string updated_at = 13;
}

message OperationResponse {
  bool success = 1;
  string message = 2;
}

